Got working static version of full site ready

--- a/roll2.html
+++ b/roll2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Filament</title>
+  <title>Project Filament - Generic Green</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="skeleton.css">
@@ -10,8 +10,46 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class='container background' id="app"></div>
+  <div class='container background' id="app">
 
+    <div class='row'>
+      <div class='header twelve columns'>
+        <h1>Project Filament</h1>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='nav four columns'>
+        <h4>Filaments</h4>
+        <ul>
+          <li><a href='roll1.html' class='fLink'>Generic Blue</a></li>
+          <li><a href='roll2.html' class='fLink'>Generic Green</a></li>
+        </ul>
+      </div>
+      <div class='profile eight columns'>
+        <h2>Generic Green</h2>
+
+        <h5>Param 1: data 1 </h5>
+        <h5>Param 2: data 2</h5>
+        <h5>Param 3: data 3</h5>
+        <h5>Param 4: data 4</h5>
+
+        <p>
+          <a class='button button-primary' href='roll2.html'>Edit These Parameters</a>
+        </p>
+        <p>
+          <a class='button button-primary' href='index.html'>Delete This Record</a>
+        </p>
+      </div>
+    </div>
+
+    <div class='row'>
+      <div class='weather twelve columns'>
+        Weather API section
+      </div>
+    </div>
+
+  </div>
 
 </body>
 </html>
