--- a/add.html
+++ b/add.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project Filament</title>
+  <title>Project Filament - Add New</title>
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="skeleton.css">
@@ -27,10 +27,18 @@
         </ul>
       </div>
       <div class='profile eight columns'>
-        <p class='profileText'>On the left, click the name of the filament profile you'd like to view.</p><br>
-        <p class='profileText'>Or...</p>
+        <h2>Adding New Filament</h2>
+
+        <h5>Param 1: <input></input></h5>
+        <h5>Param 2: <input></input></h5>
+        <h5>Param 3: <input></input></h5>
+        <h5>Param 4: <input></input></h5>
+
         <p>
-          <a class='button button-primary' href='add.html'>Add New Parameters</a>
+          <a class='button button-primary' href='edit.html'>Confirm New Parameters</a>
+        </p>
+        <p>
+          <a class='button button-primary' href='index.html'>Cancel New Parameters</a>
         </p>
       </div>
     </div>
